pro/src/ui-kit/MultiSelect/MultiSelect.module.scss
@use "styles/mixins/_fonts.scss" as fonts;
@use "styles/mixins/_rem.scss" as rem;
@use "styles/mixins/_a11y.scss" as a11y;
@use "styles/mixins/_size.scss" as size;
@use "styles/mixins/_outline.scss" as outline;

.container {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: rem.torem(542px);
  position: relative;
  margin-bottom: rem.torem(8px);

  &-label {
    display: block;
    margin-bottom: rem.torem(8px);
  }

  &-error {
    margin-top: rem.torem(8px);

    svg {
      flex: 0 0 rem.torem(15px);
    }
  }
}

.legend {
  @include fonts.body;

  color: var(--color-black);
  margin-bottom: rem.torem(8px);
}

.trigger {
  @include fonts.body;

  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: rem.torem(8px) rem.torem(12px);
  background-color: var(--color-white);
  border: 1px solid var(--color-grey-semi-dark);
  border-radius: rem.torem(10px);
  width: 100%;
  cursor: pointer;
  height: rem.torem(42px);

  &:disabled {
    background-color: var(--color-grey-light);
    border: rem.torem(1px) solid var(--color-input-border-color-disabled);
    color: var(--color-grey-dark);
    cursor: auto;
  }

  &:hover {
    background: var(--color-grey-light);
  }

  &:focus {
    border: 2px solid var(--color-black);
  }

  &:focus-visible {
    @include outline.focus-outline;

    border-radius: rem.torem(8px);
    border: 1px solid var(--color-grey-dark);
  }

  &-selected {
    border: 1px solid var(--color-black);
  }

  &-error {
    border: 1px solid var(--color-error);
  }
}

.trigger-content {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: rem.torem(8px);
}

.trigger-label {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 300px;
}

.badge {
  @include fonts.body-accent-xs;

  display: flex;
  align-items: center;
  justify-content: center;
  width: rem.torem(24px);
  height: rem.torem(24px);
  background-color: var(--color-secondary-light);
  color: var(--color-white);
  border-radius: 50%;
}

.chevron {
  width: rem.torem(16px);
  height: rem.torem(16px);
  color: var(--color-black);

  &-disabled {
    color: var(--color-grey-dark)
  }
}

.chevron-open {
  transform: rotate(180deg);
}

.item {
  display: block;
  width: 100%;
  text-align: left;
  background: none;
  border: none;
  cursor: pointer;

  &:hover {
    background: var(--color-grey-light);
  }
}

.tags {
  display: flex;
  flex-wrap: wrap;
  gap: rem.torem(8px);
}

.panel {
  position: absolute;
  z-index: 1;
  background-color: var(--color-white);
  left: 0;
  right: 0;
  top: rem.torem(42px);
  box-shadow: 0 rem.torem(3px) rem.torem(4px) var(--color-medium-shadow);
  padding-top: rem.torem(16px);
  border-radius: rem.torem(8px);
}

.panel-scrollable {
  max-height: rem.torem(288px);
  overflow: auto;
}

.label {
  @include fonts.body;

  padding: rem.torem(11.2px) rem.torem(16px) rem.torem(11.2px) 0;
}

.checkbox {
  margin-left: rem.torem(24px);
}

.search-input {
  margin: 0 rem.torem(24px);
  margin-bottom: rem.torem(8px);
}

.empty-search {
  @include fonts.body;

  text-align: center;
  margin-top: rem.torem(16px);
  margin-bottom: rem.torem(16px);
}

.visually-hidden {
  @include a11y.visually-hidden;
}

.separator {
  height: rem.torem(1px);
  background: var(--color-grey-medium);
  margin: 0 rem.torem(24px);
}

